 modifications, as long as this notice is preserved.

 This program is distributed in the hope that it will be useful, but
 WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

ChangeLog about GNU GLOBAL

June 27 2010, Shigo YAMAGUCHI

	Modification of the -S option.

	1. New htags requires a unique key as the parameter of the -S option.
	   (It is a incompatible change.)
	2. Htags makes a file whose name is the key in shared area, and
	   put the path of the HTML directory in it.
	3. To make the file name unique, a key that already exists
	   is not allowed without --over-write option.

	[in /var/src]
	$ htags ... -S key1
		       ====
			 |
			 +----------------+-----+
					  v     |               
	[/usr/local/share/gtags/sitekeys/key1]  |
	+--------------------------------       |
	|/var/src/HTML                          |     ... (2)
						|
	[/var/src/HTML/index.html]              |
	+--------------------------------       |
	|...                                    v
	|<input type='hidden' name='id' value='key1'> ... (1)
					       ====

	The center CGI script can know the path of the HTML directory by the following
	method.

	(1) get a unique key from the variable 'id'
		=> 'key1'
	(2) read directory name from '/usr/local/share/gtags/sitekeys/' + 'key1'
		=> '/var/src/HTML'

	This mechanism conceals the real path name of the HTML directory.

May 21 2010, Shigo YAMAGUCHI

	* Removed support for command layer plug-in parser(gtags-parser/).

May 20 2010, Shigo YAMAGUCHI

	* Changed the architecture of gtags(1) from 2 pass to 1 pass.

	[Current]

        Pass 1:                      +-------+ 
          source files =============>| gtags |============> GTAGS
                                     |       |============> GPATH
                                     |       |============> temporary file